syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/rest-api/src/clients/rpc/users";

package flydev_chat_app_users;

service UsersProtoInterface{

    rpc GetUserByUuid(Uuid) returns (UserMsgResponse) {}

    rpc GetUserProfileByUuid(MultipleUuids) returns (UserProfileMsgResponse) {}

    rpc DeleteUserByUuid(Uuid) returns (Svr_msg) {}

    rpc CreateUser(RegisterUser) returns (Svr_msg) {}

    rpc UpdateUser(UpdateUserRequest) returns (UserProfileMsgResponse) {}

    rpc UpdateActive(UpdateActiveRequest) returns (Svr_msg) {}
//Este user en user login voy a reemplazarlo por un login_form que tenga login_user y login_password como atributos.
    rpc UserLogin(User) returns (UserMsgResponse) {}

    rpc SearchContact(SearchContactRequest) returns (UserProfileMsgResponse) {}
}

message Uuid {
    string uuid =1;
}

message MultipleUuids {
    repeated Uuid uuids =1;
}

message User{
    int64 id =1;
    Uuid uuid =2;
    string login_user =3;
    string login_password =4;
}

message UserProfile {
    Uuid uuid= 1;
    bool active= 2;
    string phone = 3;
    string first_name= 4;
    string last_name= 5;
    string user_name= 6;
    string description= 7;
    string avatar_url= 8;
    string created_at =9;
}

message RegisterUser{
    User login_info =1;
    UserProfile profile_info= 2;
}


message Svr_msg{
    int32 status=1;
    string message=2;
}

message UserMsgResponse{
    User user =1;
    Svr_msg msg =2;
}

message UserProfileMsgResponse{
    repeated UserProfile user =1;
    Svr_msg msg =2;
}

message UserProfileUuid{
    Uuid uuid =1;
    UserProfile user =2;
}

message UpdateUserRequest{
    UserProfileUuid content = 1;
    bool partial=2;
}

message UpdateActiveRequest{
    Uuid uuid=1;
    bool active =2;
}

message SearchContactRequest{
    string query =1;
    repeated string excludeUuids =2;
}